# data_linter

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  config-schema.json  log_explorer.ipynb  pyproject.toml  requirements.txt
.github/workflows/: Lint.yml  check-packages.yml  poetry-pypi-release.yml  run-tests.yml  test-mojap-suite.yml
data_linter/: __init__.py  command_line.py  constants.py  ge_validator.py  iam.py  log_explorer_utils.py  logging_functions.py  utils.py  validation.py
data_linter/schemas/: config-schema.json
data_linter/validators/: __init__.py  base.py  frictionless_validator.py  great_expectations_validator.py  pandas_validator.py  parquet_validator.py
example/: config.yml
python_scripts/: constants.py  functions.py  logging_functions.py  main.py
schemas/: config-schema.json
tests/: Dockerfile  Dockerfile_no_lock  config.yaml  conftest.py  helpers.py  test_configs.py  test_end_to_end_run.py  test_functions.py  test_generate_iam_config.py  test_great_expectations.py  test_headers.py  test_logging.py  test_moto.py  test_pandas_validator.py  test_parquet_validator.py  test_simple_examples.py
tests/data/: basic_meta_data.json  config_generate_iam_with_fail_path.yaml  config_generate_iam_without_fail_path.yaml  example_config.yaml  example_config_fail_bucket.yaml  example_config_pass.yaml  expected_pass.json  iam_config.yaml  junk.py
tests/data/end_to_end1/: config.yaml  table1.csv  table2.csv
tests/data/end_to_end1/bin_pack/: config_1_0.yml  config_2_0.yml  config_2_1.yml  config_3_2.yml  config_5_0.yml  config_6_0.yml  config_6_1.yml
tests/data/end_to_end1/land/: table2.jsonl  table2_reordered_cols.jsonl
tests/data/end_to_end1/meta_data/: table1.json  table2.json  table3.json
tests/data/end_to_end1/parquet/: table3.parquet
tests/data/end_to_end2/metadata/: table1.json  table1_pq.json
tests/data/expected/: expected_pass.json  test_iam_fail_path.yaml  test_iam_no_fail_path.yaml
tests/data/great_expectations/: config.yaml  table1_na_test.csv
tests/data/great_expectations/meta_data/: table1.json
tests/data/headers/: config.yaml  table1.csv  table1_no_header.csv  table1_strict_headers.csv  table1_uppercase.csv  table2_missing_keys.jsonl  table2_mixed_headers.jsonl
tests/data/headers/meta_data/: table1.json  table2.json
tests/data/inputs/: basic_meta_data.json  config_generate_iam_with_fail_path.yaml  config_generate_iam_without_fail_path.yaml  example_config_fail_bucket.yaml  example_config_fail_enum.yaml  example_config_fail_enum_underscores.yaml  example_config_fail_required.yaml  example_config_fail_required_underscores.yaml  example_config_fail_table.yaml  example_config_fail_type.yaml  example_config_fail_type_underscores.yaml  example_config_pass.yaml  example_config_pass_underscores.yaml
tests/data/mitigations/data/: all_types_sc2.csv  all_types_sc5.csv
tests/data/mitigations/meta/: all_types_sc2.json  all_types_sc3.json  all_types_sc4.json
tests/data/pandas_validator/: config_fail.yaml  config_pass.yaml
tests/data/pandas_validator/meta_data/: table1.json
tests/data/parquet_validator/: table1.parquet
tests/data/parquet_validator/meta_data/: table1_fail.json  table1_missing_columns.json  table1_pass.json
