[tool.poetry]
name = "data_linter"
version = "5.0.0"
description = "data linter"
authors = ["Thomas Hirsch <thomas.hirsch@digital.justice.gov.uk>",
           "George Kelly <george.kelly@digital.justice.gov.uk>",
           "Tapan Perkins <tapan.perkins@digital.justice.gov.uk>",
           "Karik Isichei <karik.isichei@digital.justice.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
dataengineeringutils3 = "^1.0.1"
boto3 = "^1.14.7"
jsonschema = "^3.2.0"
pyyaml = "^5.3.1"
iam_builder = "^3.7.0"
importlib-metadata = "^1.7"
pandas = "^1.2"
great-expectations = { version = "0.12.9", optional = true }
awswrangler = {version = "1.10.0", optional = true}

frictionless = {version = "3.24.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^3.4"
moto = "^1.3"
flake8 = "^3.8.4"
jupyterlab = "^2.2.8"

[tool.poetry.extras]
ge = ["great-expectations", "awswrangler"]
frictionless = ["frictionless"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
data_linter = "data_linter.command_line:main"
