[tool.poetry]
name = "data_linter"
version = "6.3.1"
description = "data linter"
authors = ["Thomas Hirsch <thomas.hirsch@digital.justice.gov.uk>",
           "George Kelly <george.kelly@digital.justice.gov.uk>",
           "Tapan Perkins <tapan.perkins@digital.justice.gov.uk>",
           "Karik Isichei <karik.isichei@digital.justice.gov.uk>",
           "Stephen Bias <stephen.bias@digital.justice.gov.uk>"]

readme = "README.md"
repository = "https://github.com/moj-analytical-services/data_linter"
homepage = "https://github.com/moj-analytical-services/data_linter"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
dataengineeringutils3 = "^1.0.1"
boto3 = "^1.14.7"
jsonschema = "^4.10.0"
PyYAML = "^6.0.1"
iam_builder = "^4.1.0"
pandas = ">=1.2"
mojap-metadata = {version = "^1.10.0", extras = ["arrow"]}
arrow-pd-parser = ">=1.3.0"
awswrangler = ">=2.12.0"
toml = "^0.10"
numpy = "<2.0.0"
setuptools = ">=76.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.1"
moto = "^4"
flake8 = "^3.8.4"

[tool.poetry.extras]
ge = ["great-expectations"]
frictionless = ["frictionless"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
data_linter = "data_linter.command_line:main"
